--- a/style.css
+++ b/style.css
@@ -4,22 +4,41 @@
   box-sizing: border-box;
 
   /* Color scheme */
-
-  --textcolor: #121212;
-  --bgcolor: #fff;
-  --highlight: #b927c9;
+  --textcolor: #2e3440;
+  --bgcolor: #eceff4;
+  --highlight: repeating-linear-gradient(
+    to right,
+    hsl(333, 100%, 59%),
+    hsl(27, 100%, 65%),
+    hsl(50, 100%, 50%),
+    hsl(108, 70%, 58%),
+    hsl(170, 63%, 64%),
+    hsl(233, 63%, 64%),
+    hsl(284, 97%, 41%),
+    hsl(305, 97%, 41%)
+  );
 }
 
 @media (prefers-color-scheme: dark) {
   * {
-    --textcolor: #dadada;
-    --bgcolor: #141414;
-    --highlight: #ffc400;
+    --textcolor: #eceff4;
+    --bgcolor: #2e3440;
+    --highlight: repeating-linear-gradient(
+      to right,
+      hsl(333, 100%, 59%),
+      hsl(27, 100%, 65%),
+      hsl(50, 100%, 50%),
+      hsl(108, 70%, 58%),
+      hsl(170, 63%, 64%),
+      hsl(233, 63%, 64%),
+      hsl(284, 97%, 41%),
+      hsl(305, 97%, 41%)
+    );
   }
 }
 
 body {
-  font-size: 18px;
+  font-size: 24px;
   font-family: system-ui, sans-serif;
   line-height: 1.4;
   color: var(--textcolor);
@@ -32,7 +51,7 @@ body {
 /* ------- Sections ------- */
 
 section {
-  padding: calc(6em + 5vw) 5vw 8vw 5vw;
+  padding: calc(6em + 5vw) 10vw 8vw 10vw;
   /* ! Everything below is needed ! */
   display: none;
   position: absolute;
@@ -55,7 +74,7 @@ section#home {
 /* ------- Header ------- */
 
 header {
-  padding: 5vw 5vw 0 5vw;
+  padding: 7vw 10vw 0 10vw;
   display: flex;
   flex-wrap: wrap;
   position: absolute;
@@ -82,16 +101,19 @@ a {
   color: currentColor;
 }
 
+a.underlined::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -0.2em;
+  height: 0.1em;
+  width: 100%;
+  background: var(--highlight);
+  z-index: -1;
+}
+
 a:hover {
-  background: repeating-linear-gradient(
-    to right,
-    #ff2f8e,
-    #ff9e4c,
-    #ffd600,
-    #66df48,
-    #6a77dd,
-    #9803ce
-  );
+  background: var(--highlight);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -100,7 +122,7 @@ a:hover {
 @media (prefers-reduced-motion: no-preference) {
   a:hover {
     background-size: 200% 100%;
-    animation: rainbow 0.5s linear infinite;
+    animation: rainbow 0.8s linear infinite;
   }
 }
 
@@ -137,6 +159,7 @@ ul {
 
 ul li::marker {
   content: "\2022   ";
+  color: currentColor;
 }
 
 li {
@@ -309,6 +332,7 @@ a[href*="//"]:after
   content: "\2197"; /* top right arrow: ↗ */
   color: var(--textcolor);
   opacity: 0.25;
+  margin-left: 0.25em;
 }
 
 a[href*="//"]:hover:after
@@ -505,12 +529,6 @@ article time {
 }
 
 /* ------- Smaller screens ------- */
-
-@media only screen and (max-width: 680px) {
-  body {
-    font-size: 16px;
-  }
-}
 
 @media only screen and (max-width: 540px) {
   nav {
