--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -19,6 +19,8 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/public/img/favicon-16x16.png"/>
 		<link rel="manifest" href="/public/img/site.webmanifest"/>
 
+		<script src="//unpkg.com/alpinejs" defer></script>
+
 		{%- css %}{% include "public/css/stylesheet.css" %}{% endcss %}
 		<style>
 			{% getBundle "css" %}
