--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -112,6 +112,10 @@ h6 {
   }
 }
 
+[x-cloak] {
+  display: none !important;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
