are we css module yet

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,6 @@
 ---
-import Header from '../components/header.astro';
-import Default from '../layouts/default.astro';
+import Header from '@components/header.astro';
+import Default from '@layouts/default.astro';
 ---
 
 <Default>
