--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,20 @@
 ---
-import Header from '../components/header.astro';
-import Intro from '../components/intro.astro';
-import Default from '../layouts/default.astro';
+import Header from '@components/header.astro';
+import Intro from '@components/intro.astro';
+import Default from '@layouts/default.astro';
 ---
 
 <Default>
   <Header />
   <Intro />
+  <section>
+    <h3>Doodles</h3>
+    <ul>
+      <li>
+        <a href="doodles/are-we-css-module-yet">Are We CSS Module Yet?</a>
+      </li>
+    </ul>
+  </section>
   <section>
     <details>
       <summary>
