--- a/src/pages/mailbox.astro
+++ b/src/pages/mailbox.astro
@@ -1,6 +1,6 @@
 ---
-import { MailBox } from '../components/mailbox';
-import Default from '../layouts/default.astro';
+import { MailBox } from '@components/mailbox';
+import Default from '@layouts/default.astro';
 ---
 
 <style>
