--- a/public/public/css/stylesheet.css
+++ b/public/public/css/stylesheet.css
@@ -43,6 +43,7 @@ svg {
   display: block;
   max-width: 100%;
   fill: currentColor;
+  height: auto;
 }
 /*
   7. Remove built-in form typography styles
@@ -71,8 +72,8 @@ h6 {
 */
 * {
   /* Color scheme */
-  --textcolor: #2e3440;
-  --bgcolor: #eceff4;
+  --textcolor: #222222;
+  --bgcolor: #f2f2f2f2;
   --highlight: repeating-linear-gradient(
     to right,
     hsl(333, 100%, 59%),
@@ -107,8 +108,8 @@ h6 {
 
 @media (prefers-color-scheme: dark) {
   * {
-    --textcolor: #eceff4;
-    --bgcolor: #2e3440;
+    --textcolor: #f2f2f2f2;
+    --bgcolor: #222222;
   }
 }
 
@@ -117,8 +118,8 @@ h6 {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   color: var(--textcolor);
   background: var(--bgcolor);
   padding-top: var(--top-padding);
@@ -147,7 +148,8 @@ main {
   flex-direction: column;
 }
 
-section {
+section,
+article {
   margin-top: var(--s1);
 }
 
@@ -159,16 +161,18 @@ section {
 }
 
 p {
-  font-size: 1.4em;
+  font-size: 1em;
 }
+
 a {
   position: relative;
   text-decoration: none;
   color: currentColor;
+  overflow-wrap: anywhere;
 }
 
 a.underlined::after {
-  content: "";
+  content: '';
   position: absolute;
   left: 0;
   bottom: -0.2em;
@@ -205,7 +209,7 @@ ol {
 
 br {
   display: block;
-  content: "";
+  content: '';
   margin-top: var(--s1);
 }
 
@@ -226,7 +230,7 @@ blockquote {
 }
 
 blockquote:before {
-  content: "";
+  content: '';
   position: absolute;
   left: 0;
   top: 0.3em;
@@ -299,10 +303,10 @@ label.label:hover {
 }
 
 label.label:before {
-  content: "[";
+  content: '[';
 }
 label.label:after {
-  content: "]";
+  content: ']';
 }
 
 label + input,
@@ -321,7 +325,7 @@ a[href*="//"]:after
 {
   font-weight: 300;
   font-size: 0.85em;
-  content: "\2197"; /* top right arrow: ↗ */
+  content: '\2197'; /* top right arrow: ↗ */
   color: var(--textcolor);
   opacity: 0.25;
   margin-left: 0.25em;
@@ -340,24 +344,24 @@ a:not(.underlined):after {
   margin-inline-start: 0.4em;
 }
 
-a[href$=".pdf"]:after {
-  content: "PDF";
+a[href$='.pdf']:after {
+  content: 'PDF';
 }
-a[href$=".txt"]:after {
-  content: "TXT";
+a[href$='.txt']:after {
+  content: 'TXT';
 }
-a[href$=".mp3"]:after {
-  content: "MP3";
+a[href$='.mp3']:after {
+  content: 'MP3';
 }
-a[href$=".zip"]:after {
-  content: "ZIP";
+a[href$='.zip']:after {
+  content: 'ZIP';
 }
-a[href$=".rar"]:after {
-  content: "RAR";
+a[href$='.rar']:after {
+  content: 'RAR';
 }
-a[href$=".jpeg"]:after,
-a[href$=".jpg"]:after,
-a[href$=".gif"]:after,
-a[href$=".png"]:after {
-  content: "IMG";
+a[href$='.jpeg']:after,
+a[href$='.jpg']:after,
+a[href$='.gif']:after,
+a[href$='.png']:after {
+  content: 'IMG';
 }
