fixes link typo

--- a/src/pages/doodles/are-we-css-module-yet.astro
+++ b/src/pages/doodles/are-we-css-module-yet.astro
@@ -76,7 +76,7 @@ import Default from '@layouts/default.astro';
       <div class="unsupported">
         Your browser doesn't support CSS Nesting Module :(
         <p>
-          Check <a class="link" href="https//caniuse.com/css-nesting"
+          Check <a class="link" href="https://caniuse.com/css-nesting"
             >https://caniuse.com/css-nesting</a
           > for compatible browsers
         </p>
