--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -20,6 +20,11 @@ const { title = 'ben mcgarvey', description = 'ben mcgarvey' } = Astro.props;
     <meta property="og:description" content={description} />
 
     <link rel="stylesheet" href="/public/css/stylesheet.css" />
+    <script
+      src="https://cdn.counter.dev/script.js"
+      data-id="107c94ce-cfbd-451c-942e-9fb72048e8a7"
+      data-utcoffset="11"
+    ></script>
 
     <link
       rel="apple-touch-icon"
