--- a/src/pages/doodles/are-we-css-nesting-module-yet.astro
+++ b/src/pages/doodles/are-we-css-nesting-module-yet.astro
@@ -62,7 +62,7 @@ import Default from '@layouts/default.astro';
 <Default>
   <Header />
   <article>
-    <h2>Are We CSS Module Yet?</h2>
+    <h2>Are We CSS Nesting Module Yet?</h2>
     <br />
     <div class="parent">
       <div class="supported">
