--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,9 @@ import Default from '@layouts/default.astro';
     <h3>Doodles</h3>
     <ul>
       <li>
-        <a href="doodles/are-we-css-module-yet">Are We CSS Module Yet?</a>
+        <a href="doodles/are-we-css-nesting-module-yet"
+          >Are We CSS Nesting Module Yet?</a
+        >
       </li>
     </ul>
   </section>
