add link to tech radar

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,11 @@ import Default from '@layouts/default.astro';
           >Are We CSS Nesting Module Yet?</a
         >
       </li>
+      <li>
+        <a href="https://tech-radar.benmcgarvey.com"
+          >Drag and Drop Technology Radar (WIP)</a
+        >
+      </li>
     </ul>
   </section>
   <section>
