adds conway's game of life

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,9 @@ import Default from '@layouts/default.astro';
         >
       </li>
       <li>
+        <a href="doodles/game-of-life">Conway's Game of Life</a>
+      </li>
+      <li>
         <a href="https://tech-radar.benmcgarvey.com"
           >Drag and Drop Technology Radar (WIP)</a
         >
