--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,11 @@ import Default from '@layouts/default.astro';
         <a href="doodles/game-of-life">Conway's Game of Life</a>
       </li>
       <li>
+        <a href="doodles/game-of-life/three-js"
+          >Conway's Game of Life using three.js</a
+        >
+      </li>
+      <li>
         <a href="https://tech-radar.benmcgarvey.com"
           >Drag and Drop Technology Radar (WIP)</a
         >
