--- a/src/pages/doodles/game-of-life/three-js/index.astro
+++ b/src/pages/doodles/game-of-life/three-js/index.astro
@@ -1,6 +1,8 @@
 <script>
   import * as THREE from 'three';
+  // @ts-ignore
   import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+  // @ts-ignore
   import Stats from 'three/addons/libs/stats.module.js';
 
   import { Cell, CellState, Game, cellGrid } from '../_game-of-life';
