updates mcgarvey to mardana

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,7 +1,7 @@
 <header>
   <h1>
     <a href="/" class="underlined">
-      <slot> ben mcgarvey</slot>
+      <slot>ben mardana</slot>
     </a>
   </h1>
 </header>
