--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -19,14 +19,14 @@
   <ul>
     <li>
       Email:
-      <a href="mailto:b.mcgarvey.bm@gmail.com">
-        <em>b.mcgarvey.bm@gmail.com</em>
+      <a href="mailto:ben.mardana@gmail.com">
+        <em>ben.mardana@gmail.com</em>
       </a>
     </li>
     <li>
       Github:
-      <a href="https://github.com/benmcgarvey">
-        <em>github.com/benmcgarvey</em>
+      <a href="https://github.com/benmardana">
+        <em>github.com/benmardana</em>
       </a>
     </li>
   </ul>
