--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -4,7 +4,7 @@ interface Props {
   description?: string;
 }
 
-const { title = 'ben mcgarvey', description = 'ben mcgarvey' } = Astro.props;
+const { title = 'ben mardana', description = 'ben mardana' } = Astro.props;
 ---
 
 <!DOCTYPE html>
