--- a/src/pages/doodles/game-of-life/index.astro
+++ b/src/pages/doodles/game-of-life/index.astro
@@ -212,7 +212,7 @@ import Default from '@layouts/default.astro';
       different drawing method such as <a
         href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/canvas"
         >canvas</a
-      >. <a href="https://benmcgarvey.com/doodles/game-of-life/three-js"
+      >. <a href="https://benmardana.com/doodles/game-of-life/three-js"
         >A very rough three.js implementation can be found here</a
       >
     </p>
