--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import Default from '@layouts/default.astro';
         >
       </li>
       <li>
-        <a href="https://tech-radar.benmcgarvey.com"
+        <a href="https://tech-radar.benmardana.com"
           >Drag and Drop Technology Radar (WIP)</a
         >
       </li>
