--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -7,7 +7,7 @@ interface Props {
 const { title = 'ben mardana', description = 'ben mardana' } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -23,8 +23,8 @@ const { title = 'ben mardana', description = 'ben mardana' } = Astro.props;
     <script
       src="https://cdn.counter.dev/script.js"
       data-id="107c94ce-cfbd-451c-942e-9fb72048e8a7"
-      data-utcoffset="11"
-    ></script>
+      data-utcoffset="11"></script>
+    <script async defer src="https://scripts.withcabin.com/hello.js"></script>
 
     <link
       rel="apple-touch-icon"
