--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -9,8 +9,8 @@
   <p>I am a <em>Software Engineer</em></p>
   <p>
     Working for
-    <a href="https://www.thoughtworks.com/">
-      <em>Thoughtworks</em>
+    <a href="https://www.canva.com/">
+      <em>Canva</em>
     </a>
   </p>
   <p>Living in <em>Melbourne, Australia</em></p>
