--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -19,31 +19,33 @@ const { title = 'ben mardana', description = 'ben mardana' } = Astro.props;
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
 
-    <link rel="stylesheet" href="/public/css/stylesheet.css" />
+    <link rel="stylesheet" href="/css/stylesheet.css" />
     <script
+      is:inline
       src="https://cdn.counter.dev/script.js"
       data-id="107c94ce-cfbd-451c-942e-9fb72048e8a7"
       data-utcoffset="11"></script>
-    <script async defer src="https://scripts.withcabin.com/hello.js"></script>
+    <script is:inline async defer src="https://scripts.withcabin.com/hello.js"
+    ></script>
 
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/public/img/apple-touch-icon.png"
+      href="/img/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/public/img/favicon-32x32.png"
+      href="/img/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/public/img/favicon-16x16.png"
+      href="/img/favicon-16x16.png"
     />
-    <link rel="manifest" href="/public/img/site.webmanifest" />
+    <link rel="manifest" href="/img/site.webmanifest" />
   </head>
 
   <body>
