--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -1,10 +1,6 @@
 ---
-interface Props {
-  title?: string;
-  description?: string;
-}
-
-const { title = 'ben mardana', description = 'ben mardana' } = Astro.props;
+const title = 'ben mardana';
+const description = 'ben mardana';
 ---
 
 <!doctype html>
