--- a/src/pages/doodles/game-of-life/index.astro
+++ b/src/pages/doodles/game-of-life/index.astro
@@ -1,5 +1,5 @@
 ---
-import Citation from '@components/citation.astro';
+import Asterisk from '@components/asterisk.astro';
 import Header from '@components/header.astro';
 import Default from '@layouts/default.astro';
 ---
@@ -177,7 +177,7 @@ import Default from '@layouts/default.astro';
     <br />
     <h4>Notes</h4>
     <p>
-      Rules <Citation
+      Rules <Asterisk
         url="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life#Rules"
       />
       <ol>
