--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -100,6 +100,7 @@ h6 {
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
     sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-weight: 300;
   color: var(--textcolor);
   background: var(--bgcolor);
   padding: 16px;
@@ -122,7 +123,7 @@ a {
   position: relative;
   text-decoration: none;
   color: currentColor;
-  font-weight: bolder;
+  font-weight: 400;
   overflow-wrap: anywhere;
 }
 
